--- a/index.html
+++ b/index.html
@@ -5,8 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Picnic</title>
+
+    <!-- -------Bootstrap CSS stylesheet ---------- -->
+  <link rel="stylesheet" href="css/bootstrap.min.css" />
+
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-    
+    <main>
+        <section>
+
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="Pictures/picnic-party.jpg" alt="picnic">
+                </div>
+                <div class="col-md-6">
+
+                </div>
+            </div>
+        </section>
+    </main>
+    <script src="js/picnic.js"></script>
 </body>
 </html>
