--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <section>
 
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-4">
                     <img src="Pictures/picnic-party.jpg" alt="picnic">
                 </div>
-                <div class="col-md-6">
-
+                <div class="col-md-8">
+                    <h4>expense</h4>
                 </div>
             </div>
         </section>
