--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Picnic</title>
+    <title>Student</title>
 
     <!-- -------Bootstrap CSS stylesheet ---------- -->
   <link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -12,19 +12,75 @@
     <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-    <main>
-        <section>
-
+    <header class="container">
+        <h1 class="text-center text-warning mt-3 mb-3 ">Student's Earnings</h1>
+    </header>
+    <main class="container">
+        <section class="">
             <div class="row">
-                <div class="col-md-4">
-                    <img src="Pictures/picnic-party.jpg" alt="picnic">
+
+                <div class="col-lg-6 col-md-6 col-sm-12 ">
+                    <img class="img-fluid rounded-3" src="Pictures/photo-students.jpg" style="width:100%; height:530px;" alt="">
                 </div>
-                <div class="col-md-8">
-                    <h4>expense</h4>
+                <!-- Income Input -->
+                <div class="col-lg-6 col-md-6 col-sm-12 my-2 border">
+                    <h3 class="text-center">Income</h3>
+                    <div class="input-group input-group-sm mb-3">
+                        <span class="input-group-text" id="inputGroup-sizing-sm">Income:</span>
+                        <input type="text" class="form-control" aria-label="Sizing example input"
+                            aria-describedby="inputGroup-sizing-sm" id="income-input">
+                    </div>
+                    <!-- Expenses Section -->
+                    <h3 class="text-center">Expenses</h3>
+                    <div class="input-group input-group-sm mb-3">
+                        <span class="input-group-text" id="inputGroup-sizing-sm">Food:</span>
+                        <input type="text" class="form-control" aria-label="Sizing example input"
+                            aria-describedby="inputGroup-sizing-sm" id="food-input">
+                    </div>
+
+                    <div class="input-group input-group-sm mb-3">
+                        <span class="input-group-text" id="inputGroup-sizing-sm">Rent:</span>
+                        <input type="text" class="form-control" aria-label="Sizing example input"
+                            aria-describedby="inputGroup-sizing-sm" id="rent-input">
+                    </div>
+
+                    <div class="input-group input-group-sm mb-3">
+                        <span class="input-group-text" id="">Clothes:</span>
+                        <input type="text" class="form-control" aria-label="Sizing example input"
+                            aria-describedby="inputGroup-sizing-sm" id="clothes-input">
+                    </div>
+                    <button class="btn btn-primary" id="calculate-button">Calculate</button>
+                    <div>
+                        <p class="text-center">
+                            <b>Total Expenses: <span class="text-danger" id="total-expenses">00</span> tk</b>
+                        </p>
+                        <p class="text-center">
+                            <b>Balance: <span class="text-danger" id="total-balance">00</span> tk</b>
+                        </p>
+                    </div>
+
+                    <div>
+                        <div class="input-group input-group-sm mb-3">
+                            <span class="input-group-text" id="inputGroup-sizing-sm">Save:</span>
+                            <input type="number" class="" style="width:20%;" aria-label="Sizing example input"
+                                aria-describedby="inputGroup-sizing-sm" id="amount-input"><span class=" mx-4">%</span>
+                            <button class="btn btn-primary " id="amount-save-button">Save</button>
+                        </div>
+
+                        <div>
+                            <p class="text-center">
+                                <b>Saving Amount: <span class="text-danger" id="saving-amount">00</span> tk</b>
+                            </p>
+                            <p class="text-center">
+                                <b>Remaining Balance: <span class="text-danger" id="remaining-balance">00</span> tk</b>
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
     </main>
-    <script src="js/picnic.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/student.js"></script>
 </body>
 </html>
