--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
                 <!-- Income Input -->
                 <div class="col-lg-6 col-md-6 col-sm-12 my-2 border">
-                    <h3 class="text-center">Income</h3>
+                    <h3 class="text-center">Income of Student</h3>
                     <div class="input-group input-group-sm mb-3">
                         <span class="input-group-text" id="inputGroup-sizing-sm">Income:</span>
                         <input type="text" class="form-control" aria-label="Sizing example input"
